--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/Nikko-Adrian-Pacleb/SchedFastV1#readme",
   "dependencies": {
     "async": "^3.2.4",
+    "bcrypt": "^5.1.0",
     "colors": "^1.4.0",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "~1.4.4",
